Eliminación de filtros no utilizados en métodos de consulta y sustitución de `toList` por `Collectors.toList`. Renombrados de mapeadores para coherencia y ajustes en controladores, servicios y DTOs correspondientes.