@@ -7,16 +7,17 @@ import domain.model.Comentario;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
-public class ComentarioMapper {
+public class ComentarioWebMapper {
 
     ComentarioResponse toResponse(Comentario comentario) {
         return new ComentarioResponse(comentario);
     }
 
     public List<ComentarioResponse> toComentarioResponseList(List<Comentario> comentarios) {
-        return comentarios.stream().map(this::toResponse).toList();
+        return comentarios.stream().map(this::toResponse).collect(Collectors.toList());
     }
 
     public CrearComentarioCommand toCommand(Long id, ParametrosCrearComentario request) {
