@@ -5,15 +5,16 @@ import domain.model.Usuario;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
-public class UsuarioMapper {
+public class UsuarioWebMapper {
 
     public UsuarioResponse toResponse(Usuario usuario) {
         return new UsuarioResponse(usuario);
     }
 
     public List<UsuarioResponse> toResponseList(List<Usuario> usuarios) {
-        return usuarios.stream().map(this::toResponse).toList();
+        return usuarios.stream().map(this::toResponse).collect(Collectors.toList());
     }
 }
